grammar.txt
/*++

Copyright (c) 2021 JulesIMF, MIPT

Module Name:

    grammar.txt    

Abstract:

    Grammar description.

Author / Creation date:

    JulesIMF / 26.06.2021

Revision History:

--*/


Examples:

    exit
    var     =   3; var + 4
    3*(var + 4/5)/sqrt(5)*sin(4.5)

LINE    ::=     REQ {';' REQ}*
REQ     ::=     EXPR | ASGN | _epsilon
EXPR    ::=     TERM {['+' '-'] TERM}*
TERM    ::=     PRIM {['*' '/'] PRIM}*
PRIM    ::=     CALL | '-' PRIM | '(' EXPR ')' | IMM | ID
CALL    ::=     ID '(' EXPR ')'
ID      ::=     <alpha> ['0'-'9' <alpha>]+
IMM     ::=     DEC | BIN | HEX | FLOAT | CHAR
DEC     ::=     ['0' - '9']+
BIN     ::=     '0b' ['0' - '1']+
HEX     ::=     '0x' ['0' - '9', 'a' - 'f', 'A'-'F']+
FLOAT   ::=     ['0' - '9']+ '.' ['0' - '9']+
ASGN    ::=     ID ['=' '+=' '-=' '*=' '/='] EXPR
